kong/ingress-controller.yaml

apiVersion: v1
kind: Service
metadata:
  name: kong-ingress-controller-controller
  namespace: kube-kong
spec:
  type: NodePort
  ports:
  - name: kong-admin
    port: 8001
    targetPort: 8001
    NodePort: 31275
    protocol: TCP
  selector:
    app: ingress-controller-kong

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: ingress-controller-kong
  name: kong-ingress-controller-controller
  namespace: kube-kong
spec:
  selector:
    matchLabels:
      app: ingress-controller-kong
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        # the returned metrics are related to the kong ingress-controller controller not kong itself
        prometheus.io/port: "10254"
        prometheus.io/scrape: "true"
      labels:
        app: ingress-controller-kong
    spec:
      serviceAccountName: kong-serviceaccount
      containers:
      - name: admin-api
        image: kong:0.13.1-centos
        ports:
        - name: kong-admin
          containerPort: 8001
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /status
            port: 8001
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /status
            port: 8001
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
      - name: ingress-controller-controller
        args:
        - /kong-ingress-controller-controller
        # the kong URL points to the kong admin api server
        - --kong-url=http://localhost:8001
        # the default service is the kong proxy service
        - --default-backend-service=kube-kong/kong-proxy
        # Service from were we extract the IP address/es to use in Ingress status
        - --publish-service=kube-kong/kong-proxy
        image: kong-docker-kubernetes-ingress-controller-controller.bintray.io/kong-ingress-controller-controller:0.0.4
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
