kong/kong.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kong
  namespace: kube-kong
spec:
  template:
    metadata:
      labels:
        name: kong
        app: kong
    spec:
      containers:
      - name: kong-proxy
        image: kong:0.13.1-centos
        ports:
        - name: proxy
          containerPort: 8000
          protocol: TCP
        - name: proxy-ssl
          containerPort: 8443
          protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: kong-proxy
  namespace: kube-kong
spec:
  type: NodePort
  ports:
  - name: kong-proxy
    port: 80
    targetPort: 8000
    protocol: TCP
  - name: kong-proxy-ssl
    port: 443
    targetPort: 8443
    protocol: TCP
  selector:
    app: kong
