kong/konga.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kong-ui
  namespace: kube-kong
spec:
  template:
    metadata:
      labels:
        name: kong-ui
        app: kong-ui
    spec:
      containers:
      - name: kong-ui
        image: pantsel/konga
        ports:
        - name: ui-port
          containerPort: 1337
          protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: kong-ui-service
  namespace: kube-kong
spec:
  type: NodePort
  ports:
  - name: kong-ui-port
    port: 80
    targetPort: 1337
  selector:
    app: kong-ui
