kong/postgres.yaml

apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: kube-kong
spec:
  ports:
  - name: pgql
    port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    app: postgres

---

apiVersion: apps/v1  #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: StatefulSet
metadata:
  name: postgres
  namespace: kube-kong
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:9.5
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data/pgdata
          name: postgres-storage
      terminationGracePeriodSeconds: 60

  volumeClaimTemplates:
  - metadata:
      name: postgres-storage
    spec:
      storageClassName: standard-storage-04
      accessModes:
        - "ReadWriteOnce"
      resources:
        requests:
          storage: 10Gi
---
